--- a/project/One_page_website/shared.css
+++ b/project/One_page_website/shared.css
@@ -179,7 +179,7 @@ section {
     padding: 5px;
 }
 
-.flex.container {
+.flex-container {
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
