--- a/project/One_page_website/css/Basic_style.css
+++ b/project/One_page_website/css/Basic_style.css
@@ -20,7 +20,7 @@ h1 {
     SELECT ALL SQUARES IN THE ARRAY
 ------------------------------------------------*/
 .container .squares:nth-child(-n+4) {
-    background-image: url("../images/icons/icons2.png");
+    background-image: url("../images/icons/icons.png");
     color: #fff;
     float: left;
     width: 100px;
